--- a/Day2.ipynb
+++ b/Day2.ipynb
@@ -128,6 +128,91 @@
     "\n",
     "events.coalesce(1).write.mode(\"overwrite\").option(\"header\", \"true\").csv(\"/Volumes/workspace/ecommerce/ecommerce_data/2019-Nov-export\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "8e952b88-9c60-4cfd-974f-dc2728f65686",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import functions as F\n",
+    "from pyspark.sql.window import Window\n",
+    "\n",
+    "events = spark.read.csv(\"/Volumes/workspace/ecommerce/ecommerce_data/2019-Nov.csv\", header=True, inferSchema=True)\n",
+    "# Basic operations\n",
+    "events.select(\"event_type\",\"category_id\",\"category_code\",\"price\").show(10)\n",
+    "events.filter(\"price > 100\").count()\n",
+    "events.groupBy(\"event_type\").count().show()\n",
+    "events.orderBy(\"price\", ascending=False).show(10)\n",
+    "top_brands = events.groupBy(\"brand\").count().orderBy(\"count\", ascending=False).limit(5)\n",
+    "\n",
+    "# Top 5 products by revenue\n",
+    "revenue = events.filter(F.col(\"event_type\") == \"purchase\") \\\n",
+    "    .groupBy(\"product_id\", \"product_name\") \\\n",
+    "    .agg(F.sum(\"price\").alias(\"revenue\")) \\\n",
+    "    .orderBy(F.desc(\"revenue\")).limit(5)\n",
+    "\n",
+    "# Running total per user\n",
+    "window = Window.partitionBy(\"user_id\").orderBy(\"event_time\")\n",
+    "events.withColumn(\"cumulative_events\", F.count(\"*\").over(window))\n",
+    "\n",
+    "# Conversion rate by category\n",
+    "conversion = events.groupBy(\"category_code\").agg(\n",
+    "    F.sum(F.when(F.col(\"event_type\") == \"purchase\", 1).otherwise(0)).alias(\"purchase\"),\n",
+    "    F.sum(F.when(F.col(\"event_type\") == \"view\", 1).otherwise(0)).alias(\"view\")\n",
+    ").withColumn(\n",
+    "    \"conversion_rate\",\n",
+    "    (F.col(\"purchase\") / F.col(\"view\")) * 100\n",
+    ")\n",
+    "display(conversion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "915b6b5e-23f0-4728-9a8a-967d0a3146bc",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import functions as F\n",
+    "\n",
+    "# Derived feature: discounted price (10% off)\n",
+    "events = events.withColumn(\n",
+    "    \"discounted_price\",\n",
+    "    F.col(\"price\") * 0.9\n",
+    ")\n",
+    "\n",
+    "# Derived feature: is_high_price (True if price > 100)\n",
+    "events = events.withColumn(\n",
+    "    \"is_high_price\",\n",
+    "    F.col(\"price\") > 100\n",
+    ")\n",
+    "\n",
+    "display(events)"
+   ]
   }
  ],
  "metadata": {
